# hw-calculator

./: .gitignore  README.md  docker-compose.yml
backend/cobol/: Dockerfile  package-lock.json  package.json
backend/cobol/src/: hw.cbl  server.ts
backend/cpp/: CMakeLists.txt  Dockerfile  vcpkg.json
backend/cpp/src/: main.cpp
backend/haskell/: CHANGELOG.md  Dockerfile  LICENSE  hw-calculator.cabal  hw-calculator.cabal.save0
backend/haskell/app/: Main.hs
backend/ocaml/hw_calculator/: Dockerfile  dune-project
backend/ocaml/hw_calculator/_build/: .db  .digest-db  log
backend/ocaml/hw_calculator/_build/default/: hw_calculator.dune-package  hw_calculator.install  hw_calculator.opam
backend/ocaml/hw_calculator/_build/default/.dune/: configurator  configurator.v2
backend/ocaml/hw_calculator/_build/default/.ppx/5f1a05a3f377d1dc5c941d388cfa21d4/: dune__exe___ppx.cmi  dune__exe___ppx.cmo  dune__exe___ppx.cmx
backend/perl/: Dockerfile  app.pl
backend/php/: Dockerfile  index.php  php.ini
backend/python/: Dockerfile  main.py
backend/r/: Dockerfile  plumber.R  start.R
backend/rust/: .gitignore  Cargo.toml  Dockerfile
backend/rust/src/: main.rs
backend/typescript/: Dockerfile  package-lock.json  package.json
backend/typescript/src/: index.ts
frontend/: astro.config.mjs  package-lock.json  package.json  tailwind.config.js
frontend/src/components/: HWCalculator.tsx
frontend/src/components/ui/: Alert.tsx  Button.tsx  Card.tsx  Input.tsx
frontend/src/pages/: index.astro
