cabal-version:      3.0
name:               hw-calculator
version:            0.1.0.0
synopsis:           Hardy-Weinberg calculator
license:            MIT
author:             Your Name
maintainer:         your.email@example.com
build-type:         Simple

executable hw-calculator
    main-is:            Main.hs
    hs-source-dirs:     src
    default-language:   Haskell2010
    ghc-options:        -Wall
    build-depends:      base >= 4.7 && < 5
                     , scotty >= 0.12
                     , aeson >= 2.0
                     , wai-cors >= 0.2
                     , wai >= 3.2
                     , http-types >= 0.12
                     , text >= 1.2